--- a/frontend/src/app/shared/days/days-hourly/days-hourly.component.html
+++ b/frontend/src/app/shared/days/days-hourly/days-hourly.component.html
@@ -41,7 +41,7 @@
                     <app-machine-edit [machName]="mach.machine">
                     </app-machine-edit>     
                 </div>
-                <app-hourly-show-each [machine]="mach" [date]="date">
+                <app-hourly-show-each [machine]="mach">
                 </app-hourly-show-each>
             </ul>
         </li>
