--- a/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
+++ b/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
@@ -2,7 +2,8 @@
     <div *ngIf="!editMulti[i]">
         <h5>Time: <br><strong>{{lot.time}}</strong><br>
         Quantity: <br><strong>{{lot.quantity}}</strong>
-        <div *ngIf="lot.counterQuantity">Counter: <br><strong>{{lot.counterQuantity}}</strong></div></h5>
+        <div *ngIf="lot.counterQuantity">Counter: <br><strong>{{lot.counterQuantity}}</strong></div>
+        <div *ngIf="lot.startTime">startTime: <br><strong>{{lot.startTime}}</strong></div></h5>
         <div class="grid">
             <button class='btn btn-primary' (click)="onEdit(i)">Edit</button>
             <button class='btn btn-danger' (click)="onDelete(lot.id)">Delete</button>
