--- a/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
+++ b/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
@@ -3,7 +3,8 @@
         <h5>Time: <br><strong>{{lot.time}}</strong><br>
         Quantity: <br><strong>{{lot.quantity}}</strong>
         <div *ngIf="lot.counterQuantity">Counter: <br><strong>{{lot.counterQuantity}}</strong></div>
-        <div *ngIf="lot.startTime">startTime: <br><strong>{{lot.startTime}}</strong></div></h5>
+        <div *ngIf="lot.startTime">Run Time: <br><strong>{{runTimes[i]}}</strong></div>
+        <div *ngIf="lot.startTime && cycleTime">Up Time: <br><strong>{{(lot.quantity*cycleTime/60/runMinutes[i]*100).toFixed(2)}}%</strong></div></h5>
         <div class="grid">
             <button class='btn btn-primary' (click)="onEdit(i)">Edit</button>
             <button class='btn btn-danger' (click)="onDelete(lot.id)">Delete</button>
