--- a/frontend/src/app/job/job-ops/job-ops-show/job-ops-show.component.css
+++ b/frontend/src/app/job/job-ops/job-ops-show/job-ops-show.component.css
@@ -33,9 +33,22 @@ button{
     font-size: auto;
 }
 
-@media only screen and (max-width: 768px) {
+.mobile {
+    display: none;
+    visibility: hidden;
+}
+
+
+@media only screen and (max-width: 900px) {
+
     button{
         font-size: 9px;
         font-weight: 600;
     }
+
+    .mobile { 
+        visibility: visible;
+        display: initial;
+    }
+
 }
