settings passing current default values to edit form component

--- a/frontend/src/app/shared/settings/settings.component.html
+++ b/frontend/src/app/shared/settings/settings.component.html
@@ -12,13 +12,13 @@
       *ngIf="auth.isNew" 
       (click)="changeTutorial()"
       class="btn btn-primary">
-      <strong>Hide Tutorial Messages</strong>
+      <strong>Hide Tutorial</strong>
     </button>
     <button
       *ngIf="!auth.isNew" 
       (click)="changeTutorial()"
       class="btn btn-primary">
-      <strong>Show Tutorial Messages</strong>
+      <strong>Show Tutorial</strong>
     </button>
   </h4>
 </div>
