Default Start Time being used in hourly component

--- a/frontend/src/app/shared/settings/settings.component.html
+++ b/frontend/src/app/shared/settings/settings.component.html
@@ -30,7 +30,7 @@
       Default Start Time: 
     </div>
     <div class="float-mid">
-      <strong>{{auth.defaultStartTime}}</strong> 
+      <strong>{{auth.defaultStartTimeString}}</strong> 
     </div>
     <div></div>
     <button class="btn btn-primary" (click)="onChangeStartTime()">
