new production from machine current job-op total page sets default machine-job-op option as previously viewed machine-job-op total

--- a/frontend/src/app/production/production-new/production-new.component.html
+++ b/frontend/src/app/production/production-new/production-new.component.html
@@ -38,7 +38,11 @@
         formControlName='machine'
         id="machine" 
         class="form-control">
-        <option *ngFor = "let machine of machines">{{machine}}</option>
+        <option 
+          *ngFor="let machine of machines"
+          [selected]="machine === myMach" >
+          {{machine}}
+        </option>
       </select>
     </div>
     <div *ngIf="notRunning" class="form-group">
