--- a/frontend/src/app/shared/change-log/change-log.component.html
+++ b/frontend/src/app/shared/change-log/change-log.component.html
@@ -66,7 +66,7 @@
                 <div *ngIf="!isShown[0]">
                 </div>
                 <div *ngIf="isShown[1]">
-                    <app-change-log-set [model]="'Job'"></app-change-log-set>
+                    <app-change-log-set [model]="'Job'" [pageSize]="3"></app-change-log-set>
                 </div>
                 <div *ngIf="!isShown[1]">
                 </div>
