--- a/frontend/src/app/job/job-find/job-find-show/job-find-show.component.html
+++ b/frontend/src/app/job/job-find/job-find-show/job-find-show.component.html
@@ -53,7 +53,7 @@
       <div routerLink="/jobs/{{job.jobNumber}}">
         <br>
         <h3>Job#: <strong>{{job.jobNumber}}</strong></h3>
-        <h4>Part#: <br> {{job.partNumber}}</h4>
+        <h4>Part#: <br> {{job.partNum}}</h4>
         <h4 *ngIf="!job.possibleQuantity && !job.weightQuantity && job.orderQuantity">
           Possible Quantity: <strong>{{job.orderQuantity}}</strong>
         </h4>
