--- a/frontend/src/app/job/job-show/job-show.component.html
+++ b/frontend/src/app/job/job-show/job-show.component.html
@@ -3,3 +3,9 @@
     <app-job-find-show [search]="job.jobNumber"> </app-job-find-show>
   </div>
 </div>
+<br>
+<div *ngIf="pagination && pagination.totalPages !> pagination.currentPage && pagination.totalPages != pagination.currentPage" class="grid2">
+  <button class="btn btn-primary" (click)="showMore()">
+    Show More
+  </button>
+</div>
