split lathe production tools to build mill production tools into existing re-usable components

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,11 @@
-<meta name="viewport" content="width=650">
+<meta name="viewport" content="width=700">
 <app-header></app-header>
 <div class="border" *ngIf="auth.isNew">
     <app-tutorial></app-tutorial>
 </div>
 <br>
 <router-outlet></router-outlet>
+<!-- <div *ngIf="!auth.isAuthenticated">
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</div> -->
 <app-footer></app-footer>
