--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-12 col-sm-offset-0 col-md-offset-0">
-      <p>©2019 My production status</p>
+      <p>©2019 My Production Status</p>
     </div>
   </div>
 </div>
