fixed link to days production from production page

--- a/frontend/src/app/production/production-find/production-find-show/production-find-show.component.html
+++ b/frontend/src/app/production/production-find/production-find-show/production-find-show.component.html
@@ -72,7 +72,7 @@
         </div>
         <div class='grid'>
             <button class='btn btn-info pull-right' routerLink="/production/op={{singleProd.opNumber}}&job={{singleProd.jobNumber}}">Job/Op <br> Production</button>
-            <button class='btn btn-primary pull-right' routerLink="/day/{{dayServ.dates[i]}}">Day <br> Production</button>
+            <button class='btn btn-primary pull-right' routerLink="/day/{{date}}">Day <br> Production</button>
         </div>
         <br>
     </div>
@@ -93,7 +93,7 @@
         </div>
         <div class='grid'>
             <button class='btn btn-info pull-right' routerLink="/production/op={{singleProd.opNumber}}&job={{singleProd.jobNumber}}">Job/Op <br> Production</button>
-            <button class='btn btn-primary pull-right' routerLink="/day/{{dayServ.dates[i]}}">Day <br> Production</button>
+            <button class='btn btn-primary pull-right' routerLink="/day/{{date}}">Day <br> Production</button>
         </div>
         <br>
     </div>
