--- a/frontend/src/app/job/job-find/job-find-show/job-find-show.component.html
+++ b/frontend/src/app/job/job-find/job-find-show/job-find-show.component.html
@@ -6,7 +6,7 @@
         <button *ngIf="oneJob.possibleQuantity" class='btn btn-info' routerLink="/jobs/calculator/{{oneJob.jobNumber}}">Remaining Bars</button>
         <button *ngIf="!oneJob.weightQuantity" class='btn btn-success' routerLink="/jobs/calculator/weight/{{oneJob.jobNumber}}">Weight Calc</button>
       </div>
-      <div routerLink="/jobs/{{oneJob.jobNumber}}">
+      <div routerLink="/{{auth.machType}}/jobs/{{oneJob.jobNumber}}">
         <br>
         <h3>Job#: <strong>{{oneJob.jobNumber}}</strong></h3>
         <h4>Part#: <br class="mobile"> <strong>{{oneJob.partNum}}</strong></h4>
