fixed tutorial updating methodology

--- a/frontend/src/app/shared/tutorial/tutorial.component.html
+++ b/frontend/src/app/shared/tutorial/tutorial.component.html
@@ -8,8 +8,8 @@
 <br>
 </h4>
 <h4 *ngIf="!machines" class="centered">
-  You will need to have at least 1 <a routerLink="/machine/new">Machine</a> and 1 <a routerLink="/parts/new">Part</a> to be able to add a 
-  <a routerLink="/jobs/new">Job</a>, and at least 1 <a routerLink="/jobs/new">Job</a> to assign an <a routerLink="/jobs">Op</a> to.
+  You will need to have at least 1 <a routerLink="lathe/machine/new">Lathe</a> and 1 <a routerLink="lathe/parts/new">Lathe Part</a> to be able to add a 
+  <a routerLink="lathe/jobs/new">Lathe Job</a>, and at least 1 <a routerLink="lathe/jobs/new">Lathe Job</a> to assign a <a routerLink="lathe/jobs">Lathe Operation</a> to.
 <br>
 </h4>
 <h4 *ngIf="machines && !parts" class="centered">
