--- a/frontend/src/app/production/production.component.html
+++ b/frontend/src/app/production/production.component.html
@@ -1,34 +1,36 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-10 col-md-10 col-sm-offset-1 col-md-offset-1">         
-            <button 
-                *ngIf="!auth.buttonHidden[0]"
-                class='btn btn-primary'
-                (click)="onNew()"
-            >
-                Add New Production
-            </button>
-            <button 
-                *ngIf="!auth.buttonHidden[1]"
-                class='btn btn-primary pull-right' 
-                routerLink="find"
-            >
-                Find Production By Job
-            </button>            
-            <br><br>
-            <form (ngSubmit)='chooseMach()' #chooseMachine="ngForm">
-                <div class="grid2 col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">    
-                    <select 
-                        id="machine" 
-                        class="form-control"
-                        [(ngModel)]="defaultMach"
-                        name="machine">
-                        <option *ngFor = "let machine of machines">{{machine}}</option>
-                    </select>
-                    <div></div>
-                    <button class="btn btn-primary"><strong>Change Machine</strong></button>
-                </div>
-            </form>   
+            <div *ngIf="auth.machType == 'lathe'">            
+                <button 
+                    *ngIf="!auth.buttonHidden[0]"
+                    class='btn btn-primary'
+                    (click)="onNew()"
+                >
+                    Add New Production
+                </button>
+                <button 
+                    *ngIf="!auth.buttonHidden[1]"
+                    class='btn btn-primary pull-right' 
+                    routerLink="find"
+                >
+                    Find Production By Job
+                </button>            
+                <br><br>
+                <form (ngSubmit)='chooseMach()' #chooseMachine="ngForm">
+                    <div class="grid2 col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">    
+                        <select 
+                            id="machine" 
+                            class="form-control"
+                            [(ngModel)]="defaultMach"
+                            name="machine">
+                            <option *ngFor = "let machine of machines">{{machine}}</option>
+                        </select>
+                        <div></div>
+                        <button class="btn btn-primary"><strong>Change Machine</strong></button>
+                    </div>
+                </form>   
+            </div>
             <br><br><br><br>
             <router-outlet></router-outlet>
         </div>
